8316000: File.setExecutable silently fails if file does not exist